# cell-tracking-schema

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/cell_tracking_schema/: __init__.py  schema.py
tests/: test_networkx_interface.py  test_schema.py
