[tool.poetry]
name = "cell-tracking-schema"
version = "0.1.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "cell_tracking_schema", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.2"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
